[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fallout_codes"
version = "0.1.0"
description = "A Python game based on the Fallout terminal hacking minigame"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.0.1",
]

[project.scripts]
fallout-codes = "xyz.fallout_codes.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
    "pre-commit>=3.7.1",
]
